# simple_tcp_serializer

./: Cargo.toml  README.md
src/: error.rs  lib.rs
